Add meta tags to HTML

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<title>Caddy Analytics</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Caddy log analyzer">
 	</head>
 	<body>
 		<div id="header">
