Add initial hourly statistics graph

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -30,20 +30,48 @@
 		</header>
 		<nav></nav>
 		<main>
-			<div id="general-stats"></div>
-			<div id="general-stats-hourly"></div>
-			<div id="location-codes"></div>
-			<div id="origin-countries"></div>
-			<div id="operating-systems"></div>
-			<div id="web-browsers"></div>
-			<div id="device-types"></div>
-			<div id="supported-encodings"></div>
-			<div id="preferred-languages"></div>
-			<div id="crypto-protocols"></div>
-			<div id="contents-types"></div>
-			<div id="http-versions"></div>
-			<div id="http-methods"></div>
-			<pre id="json"></pre>
+			<canvas width="800" height="500" id="general-stats-hourly"></canvas>
+			<!--
+			<div id="general-stats">
+				<svg></svg>
+			</div>
+			<div id="general-stats-hourly">
+				<svg></svg>
+			</div>
+			<div id="location-codes">
+				<svg></svg>
+			</div>
+			<div id="origin-countries">
+				<svg></svg>
+			</div>
+			<div id="operating-systems">
+				<svg></svg>
+			</div>
+			<div id="web-browsers">
+				<svg></svg>
+			</div>
+			<div id="device-types">
+				<svg></svg>
+			</div>
+			<div id="supported-encodings">
+				<svg></svg>
+			</div>
+			<div id="preferred-languages">
+				<svg></svg>
+			</div>
+			<div id="crypto-protocols">
+				<svg></svg>
+			</div>
+			<div id="contents-types">
+				<svg></svg>
+			</div>
+			<div id="http-versions">
+				<svg></svg>
+			</div>
+			<div id="http-methods">
+				<svg></svg>
+			</div>
+			-->
 		</main>
 	</body>
 </html>
