Change JSON data format

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -30,7 +30,7 @@
 		</header>
 		<nav></nav>
 		<main>
-			<canvas width="800" height="500" id="general-stats-hourly"></canvas>
+			<div id="general-stats-hourly"></div>
 			<!--
 			<div id="general-stats">
 				<svg></svg>
