--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,6 +4,8 @@
 		<title>Caddy Analytics</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Caddy log analytics">
+		<script defer type="module" src="./main.js"></script>
+		<link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
 		<header>
@@ -13,65 +15,24 @@
 			</div>
 			<div>
 				<p>TIME RANGE</p>
-				<p id='range'></p>
+				<p id='range'>Loading...</p>
 			</div>
 			<div>
 				<p>PARSE DURATION</p>
-				<p id='duration'></p>
+				<p id='duration'>Loading...</p>
 			</div>
 			<div>
 				<p>LOG SIZE</p>
-				<p id='size'></p>
+				<p id='size'>Loading...</p>
 			</div>
 			<div>
 				<p>LOG DIRECTORY</p>
-				<p id='directory'></p>
+				<p id='directory'>Loading...</p>
 			</div>
 		</header>
-		<nav></nav>
-		<main>
-			<div id="general-stats-hourly"></div>
-			<!--
-			<div id="general-stats">
-				<svg></svg>
-			</div>
-			<div id="general-stats-hourly">
-				<svg></svg>
-			</div>
-			<div id="location-codes">
-				<svg></svg>
-			</div>
-			<div id="origin-countries">
-				<svg></svg>
-			</div>
-			<div id="operating-systems">
-				<svg></svg>
-			</div>
-			<div id="web-browsers">
-				<svg></svg>
-			</div>
-			<div id="device-types">
-				<svg></svg>
-			</div>
-			<div id="supported-encodings">
-				<svg></svg>
-			</div>
-			<div id="preferred-languages">
-				<svg></svg>
-			</div>
-			<div id="crypto-protocols">
-				<svg></svg>
-			</div>
-			<div id="contents-types">
-				<svg></svg>
-			</div>
-			<div id="http-versions">
-				<svg></svg>
-			</div>
-			<div id="http-methods">
-				<svg></svg>
-			</div>
-			-->
-		</main>
+		<nav>
+			<div>Loading...</div>
+		</nav>
+		<main></main>
 	</body>
 </html>
