--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Caddy Analytics</title>
+		<title>Caddy Analyticsasdf</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Caddy log analytics">
 		<script defer type="module" src="./main.js"></script>
